--- a/me.html
+++ b/me.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Profile | FINANCE POINT</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Profile</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -13,7 +12,6 @@
       margin: 0;
       padding: 0;
     }
-
     header {
       background-color: rgba(20, 20, 20, 0.95);
       display: flex;
@@ -21,133 +19,94 @@
       align-items: center;
       padding: 15px 20px;
       box-shadow: 0 0 10px gold;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-
-    h1 {
-      font-size: 1.5rem;
+    header h1 {
+      font-size: 1.8rem;
     }
-
+    .container {
+      max-width: 600px;
+      margin: 30px auto;
+      background: rgba(20, 20, 20, 0.85);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gold;
+    }
+    .profile-section {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .profile-section img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      border: 2px solid gold;
+      object-fit: cover;
+    }
+    .profile-section input[type="file"] {
+      margin-top: 10px;
+      color: gold;
+    }
+    .profile-details {
+      margin-top: 20px;
+    }
+    .profile-details p {
+      margin: 10px 0;
+    }
+    input[type="email"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
+      border: 1px solid gold;
+      background: #111;
+      color: gold;
+    }
+    button {
+      padding: 10px 20px;
+      background: gold;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+    .logout {
+      text-align: right;
+      margin-top: 30px;
+    }
     .nav-container {
       background: #111;
       padding: 10px;
       display: flex;
-      justify-content: space-around;
+      flex-direction: column;
+      align-items: center;
       border-bottom: 2px solid gold;
+      box-shadow: 0 2px 4px rgba(255, 215, 0, 0.2);
     }
-
     .nav-container a {
       color: gold;
       text-decoration: none;
       font-weight: bold;
       padding: 8px 12px;
       border-radius: 5px;
+      width: 90%;
+      text-align: center;
+      margin: 5px 0;
     }
-
     .nav-container a.active {
       background: gold;
       color: black;
       pointer-events: none;
     }
-
-    .container {
-      padding: 30px 20px;
-      max-width: 500px;
-      margin: auto;
-      background-color: rgba(25, 25, 25, 0.9);
-      border-radius: 10px;
-      box-shadow: 0 0 10px gold;
-      margin-top: 40px;
-    }
-
-    .profile-section {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .profile-section img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid gold;
-      margin-bottom: 10px;
-    }
-
-    .info {
-      margin: 15px 0;
-    }
-
-    .info label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .info input {
-      width: 100%;
-      padding: 10px;
-      background-color: #111;
-      border: 1px solid gold;
-      border-radius: 6px;
-      color: gold;
-    }
-
-    .info input[disabled] {
-      opacity: 0.6;
-    }
-
-    .save-btn {
-      background: gold;
-      color: #000;
-      padding: 10px 20px;
-      border: none;
-      font-weight: bold;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-
-    .logout-area {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 40px;
-    }
-
-    .logout-area button {
-      background: none;
-      border: none;
-      color: gold;
-      font-size: 1.1rem;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-    }
-
-    .logout-area button i {
-      margin-right: 6px;
-    }
-
-    .toast {
-      position: fixed;
-      top: 80px;
-      right: 20px;
-      background-color: #222;
-      color: gold;
-      padding: 12px 20px;
-      border-radius: 6px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.6);
-      display: none;
-      z-index: 999;
-    }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>FINANCE POINT - My Profile</h1>
-  </header>
-
-  <div class="nav-container">
+    <h1>FINANCE POINT</h1>
+  </header>  <div class="nav-container">
     <a href="home.html">Home</a>
     <a href="announcement-events.html">Announcements</a>
     <a href="downloads.html">Downloads</a>
@@ -156,41 +115,25 @@
     <a href="feedback.html">Feedback</a>
     <a href="lostfound.html">Lost & Found</a>
     <a href="me.html" class="active">Me</a>
-  </div>
-
-  <div class="container">
+  </div>  <div class="container">
     <div class="profile-section">
-      <img src="https://i.imgur.com/G0LZLzF.jpg" id="profileImage" alt="Profile Picture">
-      <p><small>Profile Picture (coming soon to edit)</small></p>
-    </div>
+      <img id="profileImage" src="https://i.imgur.com/G0LZLzF.jpg" alt="Profile Picture">
+      <input type="file" id="imageUpload" accept="image/*" />
+    </div><div class="profile-details">
+  <p><strong>Full Name:</strong> <span id="fullName"></span></p>
+  <p><strong>Matric Number:</strong> <span id="matricNumber"></span></p>
+  <p><strong>Email:</strong></p>
+  <input type="email" id="emailInput" placeholder="Update your email" />
+  <button onclick="saveEmail()">Save Email</button>
+</div>
 
-    <div class="info">
-      <label>Full Name</label>
-      <input type="text" id="fullName" disabled>
-    </div>
+<div class="logout">
+  <button onclick="logoutUser()">Logout</button>
+</div>
 
-    <div class="info">
-      <label>Matric Number</label>
-      <input type="text" id="matricNumber" disabled>
-    </div>
-
-    <div class="info">
-      <label>Email</label>
-      <input type="email" id="emailInput">
-    </div>
-
-    <button class="save-btn" onclick="saveEmail()">Save Email</button>
-
-    <div class="logout-area">
-      <button onclick="logoutUser()"><i class="fas fa-sign-out-alt"></i> Logout</button>
-    </div>
-  </div>
-
-  <div class="toast" id="toast"></div>
-
-  <script type="module">
+  </div>  <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut, updateEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -205,7 +148,6 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-    const toast = document.getElementById("toast");
 
     let currentUser = null;
 
@@ -216,9 +158,9 @@
         const docSnap = await getDoc(docRef);
         if (docSnap.exists()) {
           const data = docSnap.data();
-          document.getElementById("fullName").value = data.fullName || "N/A";
-          document.getElementById("matricNumber").value = data.matricNumber || "N/A";
-          document.getElementById("emailInput").value = user.email;
+          document.getElementById("fullName").textContent = data.fullName || "-";
+          document.getElementById("matricNumber").textContent = data.matricNumber || "-";
+          document.getElementById("emailInput").value = user.email || "";
         }
       } else {
         window.location.href = "login.html";
@@ -226,25 +168,25 @@
     });
 
     window.saveEmail = async function () {
-      const email = document.getElementById("emailInput").value;
-      if (currentUser && email) {
-        try {
-          await updateEmail(currentUser, email);
-          await updateDoc(doc(db, "users", currentUser.uid), { email });
-          toast.textContent = "Email updated successfully.";
-        } catch (e) {
-          toast.textContent = "Error: " + e.message;
+      const email = document.getElementById("emailInput").value.trim();
+      if (!email || !currentUser) return;
+      await updateDoc(doc(db, "users", currentUser.uid), { email });
+      alert("Email updated successfully!");
+    };
+
+    document.getElementById("imageUpload").addEventListener("change", function(e) {
+      const file = e.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (evt) {
+          document.getElementById("profileImage").src = evt.target.result;
         }
-        toast.style.display = "block";
-        setTimeout(() => toast.style.display = "none", 3000);
+        reader.readAsDataURL(file);
       }
-    }
+    });
 
     window.logoutUser = function () {
-      signOut(auth).then(() => {
-        window.location.href = "login.html";
-      });
+      signOut(auth).then(() => window.location.href = "login.html");
     };
-  </script>
-</body>
+  </script></body>
 </html>
