--- a/me.html
+++ b/me.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Profile - Finance Point</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     body {
       margin: 0;
@@ -22,94 +23,81 @@
     header h1 {
       font-size: 1.5rem;
     }
-    .profile-container {
-      max-width: 500px;
-      margin: 40px auto;
-      background: rgba(20, 20, 20, 0.9);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px gold;
-    }
-    .profile-pic {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .profile-pic img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid gold;
-    }
-    .profile-pic input {
-      margin-top: 10px;
-      color: gold;
-    }
-    .profile-field {
-      margin: 15px 0;
-    }
-    .profile-field label {
-      display: block;
-      margin-bottom: 5px;
-    }
-    .profile-field input {
-      width: 100%;
-      padding: 10px;
-      background: #111;
-      color: gold;
-      border: 1px solid gold;
-      border-radius: 5px;
-    }
-    .save-btn {
-      width: 100%;
-      padding: 10px;
-      margin-top: 20px;
-      background: gold;
-      color: black;
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .logout {
-      text-align: right;
-      margin-top: 20px;
-    }
-    .logout button {
-      background: transparent;
-      border: none;
-      color: gold;
-      cursor: pointer;
-      font-size: 1rem;
-    }
     .nav-container {
       display: flex;
       justify-content: center;
-      gap: 10px;
-      padding: 10px;
+      flex-wrap: wrap;
       background: #111;
-      box-shadow: 0 2px 4px rgba(255, 215, 0, 0.2);
+      padding: 10px 5px;
+      border-bottom: 2px solid gold;
     }
     .nav-container a {
-      padding: 8px 12px;
+      color: gold;
       text-decoration: none;
       font-weight: bold;
-      color: gold;
+      margin: 5px;
+      padding: 8px 14px;
       border-radius: 6px;
-      background-color: rgba(40, 40, 40, 0.9);
+      background-color: rgba(30, 30, 30, 0.9);
+      transition: 0.3s;
     }
     .nav-container a.active {
       background: gold;
       color: black;
       pointer-events: none;
     }
+    .container {
+      max-width: 600px;
+      margin: 30px auto;
+      background: rgba(25, 25, 25, 0.85);
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gold;
+      text-align: center;
+    }
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid gold;
+      margin-bottom: 15px;
+    }
+    .info {
+      margin-bottom: 10px;
+    }
+    .info strong {
+      display: block;
+      font-size: 1.2rem;
+    }
+    .settings-link {
+      display: inline-block;
+      margin: 20px 0 10px;
+      color: gold;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .logout-btn {
+      display: block;
+      margin-top: 30px;
+      padding: 10px 20px;
+      background: red;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      float: right;
+    }
   </style>
 </head>
 <body>
+
   <header>
     <h1>FINANCE POINT</h1>
-    <img id="profileIcon" src="" alt="Profile" style="width:40px;height:40px;border-radius:50%;cursor:pointer" onclick="window.location.href='me.html'"/>
-  </header>  <div class="nav-container">
+  </header>
+
+  <!-- 🔶 Top Navigation Bar -->
+  <div class="nav-container">
     <a href="home.html">Home</a>
     <a href="announcement-events.html">Announcements</a>
     <a href="downloads.html">Downloads</a>
@@ -118,32 +106,25 @@
     <a href="feedback.html">Feedback</a>
     <a href="lostfound.html">Lost & Found</a>
     <a href="me.html" class="active">Me</a>
-  </div>  <div class="profile-container">
-    <div class="profile-pic">
-      <img id="displayPic" src="https://via.placeholder.com/120" alt="Profile Picture" />
-      <input type="file" id="picUpload" accept="image/*" />
-    </div>
-    <div class="profile-field">
-      <label>Full Name</label>
-      <input type="text" id="fullName" disabled />
-    </div>
-    <div class="profile-field">
-      <label>Matric Number</label>
-      <input type="text" id="matricNumber" disabled />
-    </div>
-    <div class="profile-field">
-      <label>Email</label>
-      <input type="email" id="emailInput" />
-    </div>
-    <button class="save-btn" onclick="saveChanges()">Save Changes</button><div class="logout">
-  <button onclick="logoutUser()"><i class="fas fa-sign-out-alt"></i> Logout</button>
-</div>
+  </div>
 
-  </div>  <script type="module">
+  <div class="container">
+    <img src="https://via.placeholder.com/120" alt="Profile Picture" class="profile-pic" id="profilePic">
+    
+    <div class="info">
+      <strong id="fullName">Full Name</strong>
+      <p id="matricNumber">Matric Number</p>
+      <p id="email">Email</p>
+    </div>
+
+    <a href="settings.html" class="settings-link"><i class="fas fa-cog"></i> Settings</a>
+    <button class="logout-btn" onclick="logoutUser()">Logout</button>
+  </div>
+
+  <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
@@ -155,57 +136,30 @@
     };
 
     const app = initializeApp(firebaseConfig);
-    const auth = getAuth();
+    const auth = getAuth(app);
     const db = getFirestore(app);
-    const storage = getStorage(app);
-
-    let currentUser;
 
     onAuthStateChanged(auth, async (user) => {
-      if (!user) return window.location.href = "login.html";
-      currentUser = user;
-
+      if (!user) return location.href = "login.html";
       const docRef = doc(db, "users", user.uid);
       const docSnap = await getDoc(docRef);
+
       if (docSnap.exists()) {
         const data = docSnap.data();
-        document.getElementById("fullName").value = data.fullName || "";
-        document.getElementById("matricNumber").value = data.matricNumber || "";
-        document.getElementById("emailInput").value = user.email || "";
-        if (data.profilePic) {
-          document.getElementById("displayPic").src = data.profilePic;
-          document.getElementById("profileIcon").src = data.profilePic;
+        document.getElementById("fullName").textContent = data.fullName || "Unknown User";
+        document.getElementById("matricNumber").textContent = `Matric Number: ${data.matricNumber || "N/A"}`;
+        document.getElementById("email").textContent = `Email: ${user.email}`;
+        if (data.photoURL) {
+          document.getElementById("profilePic").src = data.photoURL;
         }
       }
     });
 
-    window.saveChanges = async function () {
-      const emailInput = document.getElementById("emailInput").value;
-      const picFile = document.getElementById("picUpload").files[0];
-
-      const userRef = doc(db, "users", currentUser.uid);
-
-      let updates = {};
-
-      if (picFile) {
-        const picRef = ref(storage, `profile_pics/${currentUser.uid}`);
-        await uploadBytes(picRef, picFile);
-        const url = await getDownloadURL(picRef);
-        document.getElementById("displayPic").src = url;
-        document.getElementById("profileIcon").src = url;
-        updates.profilePic = url;
-      }
-
-      if (emailInput && emailInput !== currentUser.email) {
-        await currentUser.updateEmail(emailInput); // optional, might need re-auth
-      }
-
-      await updateDoc(userRef, updates);
-      alert("Profile updated successfully!");
-    }
-
     window.logoutUser = function () {
-      signOut(auth).then(() => window.location.href = "login.html");
-    }
-  </script></body>
+      signOut(auth).then(() => {
+        location.href = "login.html?status=logout";
+      });
+    };
+  </script>
+</body>
 </html>
